# openai_agent_project

./: .env  app.py  pyproject.toml
src/openai_agent_project/: main.py
